WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
REOPENED
298714
Fix jitMemcpy condition in copyCompactAndLinkCode
https://bugs.webkit.org/show_bug.cgi?id=298714
Summary
Fix jitMemcpy condition in copyCompactAndLinkCode
Justin Michaud
Reported
2025-09-11 06:39:50 PDT
Fix jitMemcpy condition in copyCompactAndLinkCode
Attachments
Add attachment
proposed patch, testcase, etc.
Justin Michaud
Comment 1
2025-09-11 06:40:59 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/50596
Radar WebKit Bug Importer
Comment 2
2025-09-18 06:42:09 PDT
<
rdar://problem/160856699
>
Radar WebKit Bug Importer
Comment 3
2025-09-18 06:42:09 PDT
<
rdar://problem/160856704
>
EWS
Comment 4
2025-09-30 13:00:20 PDT
Committed
300773@main
(b1f668b135a3): <
https://commits.webkit.org/300773@main
> Reviewed commits have been landed. Closing PR #50596 and removing active labels.
WebKit Commit Bot
Comment 5
2025-10-01 10:20:30 PDT
Re-opened since this is blocked by
bug 299964
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug