Fix jitMemcpy condition in copyCompactAndLinkCode https://bugs.webkit.org/show_bug.cgi?id=298714

Reviewed by Keith Miller.

In the case when r^x is enforced, but fast jit permissions are not
supported, we should use jitMemcpy.

Canonical link: https://commits.webkit.org/300773@main